--- a/src/wire/ui/mainwindow.ui
+++ b/src/wire/ui/mainwindow.ui
@@ -16,95 +16,52 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,2">
-      <item>
-       <widget class="VTKBackPlot" name="vtkbackplot"/>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="ActionButton" name="actionbutton_2">
-            <property name="text">
-             <string>E-Stop</string>
-            </property>
-            <property name="checkable">
-             <bool>true</bool>
-            </property>
-            <property name="actionName" stdset="0">
-             <string>machine.estop.toggle</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="ActionButton" name="actionbutton">
-            <property name="text">
-             <string>Power</string>
-            </property>
-            <property name="checkable">
-             <bool>true</bool>
-            </property>
-            <property name="actionName" stdset="0">
-             <string>machine.power.toggle</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="RecentFileComboBox" name="recentfilecombobox"/>
-        </item>
-        <item>
-         <widget class="GcodeTextEdit" name="gcodetextedit"/>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
-           <widget class="ActionButton" name="actionbutton_3">
-            <property name="text">
-             <string>Run</string>
-            </property>
-            <property name="actionName" stdset="0">
-             <string>program.run</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="ActionButton" name="actionbutton_7">
-            <property name="text">
-             <string>Step</string>
-            </property>
-            <property name="actionName" stdset="0">
-             <string>program.step</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="ActionButton" name="actionbutton_4">
-            <property name="text">
-             <string>Pause</string>
-            </property>
-            <property name="actionName" stdset="0">
-             <string>program.pause</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="ActionButton" name="actionbutton_6">
-            <property name="text">
-             <string>Abort</string>
-            </property>
-            <property name="actionName" stdset="0">
-             <string>program.abort</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-     </layout>
+     <widget class="QFrame" name="frame">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <widget class="ActionButton" name="actionbutton_2">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>60</y>
+         <width>225</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>E-Stop</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="actionName" stdset="0">
+        <string>machine.estop.toggle</string>
+       </property>
+      </widget>
+      <widget class="ActionButton" name="actionbutton">
+       <property name="geometry">
+        <rect>
+         <x>400</x>
+         <y>70</y>
+         <width>225</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Power</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="actionName" stdset="0">
+        <string>machine.power.toggle</string>
+       </property>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -147,22 +104,6 @@
    <class>ActionButton</class>
    <extends>QPushButton</extends>
    <header>qtpyvcp.widgets.button_widgets.action_button</header>
-  </customwidget>
-  <customwidget>
-   <class>VTKBackPlot</class>
-   <extends>QWidget</extends>
-   <header>qtpyvcp.widgets.display_widgets.vtk_backplot.vtk_backplot</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>GcodeTextEdit</class>
-   <extends>QPlainTextEdit</extends>
-   <header>qtpyvcp.widgets.input_widgets.gcode_text_edit</header>
-  </customwidget>
-  <customwidget>
-   <class>RecentFileComboBox</class>
-   <extends>QComboBox</extends>
-   <header>qtpyvcp.widgets.input_widgets.recent_file_combobox</header>
   </customwidget>
  </customwidgets>
  <resources/>
