--- a/src/wire/ui/mainwindow.ui
+++ b/src/wire/ui/mainwindow.ui
@@ -316,6 +316,48 @@ color: rgb(56, 54, 57);
         <number>1</number>
        </property>
       </widget>
+      <widget class="ActionButton" name="axisactionbutton_13">
+       <property name="geometry">
+        <rect>
+         <x>270</x>
+         <y>340</y>
+         <width>62</width>
+         <height>40</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>62</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>62</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+   	font: 15pt &quot;Bebas Kai&quot;;
+}</string>
+       </property>
+       <property name="text">
+        <string>REF X</string>
+       </property>
+       <property name="actionName" stdset="0">
+        <string>machine.home.axis:x</string>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
