--- a/src/wire/ui/mainwindow.ui
+++ b/src/wire/ui/mainwindow.ui
@@ -26,8 +26,8 @@
       <widget class="ActionButton" name="actionbutton_3">
        <property name="geometry">
         <rect>
-         <x>540</x>
-         <y>30</y>
+         <x>520</x>
+         <y>10</y>
          <width>251</width>
          <height>171</height>
         </rect>
@@ -46,7 +46,7 @@
        <property name="geometry">
         <rect>
          <x>30</x>
-         <y>40</y>
+         <y>30</y>
          <width>300</width>
          <height>96</height>
         </rect>
@@ -219,8 +219,8 @@ color: rgb(56, 54, 57);
       <widget class="HalCheckBox" name="halcheckbox">
        <property name="geometry">
         <rect>
-         <x>130</x>
-         <y>270</y>
+         <x>50</x>
+         <y>550</y>
          <width>41</width>
          <height>31</height>
         </rect>
@@ -229,8 +229,8 @@ color: rgb(56, 54, 57);
       <widget class="ActionButton" name="EStoper">
        <property name="geometry">
         <rect>
-         <x>548</x>
-         <y>248</y>
+         <x>528</x>
+         <y>228</y>
          <width>256</width>
          <height>256</height>
         </rect>
@@ -256,8 +256,8 @@ image: url(/home/cnc/wire/src/wire/ui/rs/E_Stop_Inac.png);
       <widget class="StatusLED" name="statusled_8">
        <property name="geometry">
         <rect>
-         <x>540</x>
-         <y>240</y>
+         <x>520</x>
+         <y>220</y>
          <width>270</width>
          <height>270</height>
         </rect>
@@ -285,6 +285,23 @@ image: url(/home/cnc/wire/src/wire/ui/rs/E_Stop_Inac.png);
         <string>[{&quot;channels&quot;: [{&quot;url&quot;: &quot;status:task_state?text&quot;, &quot;trigger&quot;: true}], &quot;property&quot;: &quot;Flashing&quot;, &quot;expression&quot;: &quot;ch[0] == 'E-Stop'&quot;, &quot;name&quot;: &quot;Rule_Manual&quot;}, {&quot;name&quot;: &quot;New Rule&quot;, &quot;property&quot;: &quot;On&quot;, &quot;expression&quot;: &quot;ch[0] == 'E-Stop'&quot;, &quot;channels&quot;: [{&quot;url&quot;: &quot;status:task_state?text&quot;, &quot;trigger&quot;: true}]}]</string>
        </property>
       </widget>
+      <widget class="HalLedIndicator" name="halledindicator">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>430</y>
+         <width>61</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="color">
+        <color>
+         <red>255</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </property>
+      </widget>
       <zorder>actionbutton_3</zorder>
       <zorder>stop</zorder>
       <zorder>ref_all_button_6</zorder>
@@ -292,6 +309,7 @@ image: url(/home/cnc/wire/src/wire/ui/rs/E_Stop_Inac.png);
       <zorder>halcheckbox</zorder>
       <zorder>statusled_8</zorder>
       <zorder>EStoper</zorder>
+      <zorder>halledindicator</zorder>
      </widget>
     </item>
    </layout>
@@ -355,6 +373,11 @@ image: url(/home/cnc/wire/src/wire/ui/rs/E_Stop_Inac.png);
    <class>HalCheckBox</class>
    <extends>QCheckBox</extends>
    <header>qtpyvcp.widgets.hal_widgets.hal_checkbox</header>
+  </customwidget>
+  <customwidget>
+   <class>HalLedIndicator</class>
+   <extends>QWidget</extends>
+   <header>qtpyvcp.widgets.hal_widgets.hal_led</header>
   </customwidget>
  </customwidgets>
  <resources/>
