--- a/src/wire/ui/mainwindow.ui
+++ b/src/wire/ui/mainwindow.ui
@@ -26,10 +26,10 @@
       <widget class="ActionButton" name="actionbutton_3">
        <property name="geometry">
         <rect>
-         <x>520</x>
-         <y>10</y>
-         <width>251</width>
-         <height>171</height>
+         <x>330</x>
+         <y>20</y>
+         <width>211</width>
+         <height>91</height>
         </rect>
        </property>
        <property name="text">
@@ -45,8 +45,8 @@
        </property>
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>30</y>
+         <x>10</x>
+         <y>20</y>
          <width>300</width>
          <height>96</height>
         </rect>
@@ -100,10 +100,10 @@ image: url(/home/cnc/wire/src/wire/ui/rs/off_toggle_1.png);
       <widget class="ActionButton" name="ref_all_button_6">
        <property name="geometry">
         <rect>
-         <x>50</x>
-         <y>340</y>
-         <width>125</width>
-         <height>125</height>
+         <x>560</x>
+         <y>0</y>
+         <width>300</width>
+         <height>300</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -114,8 +114,8 @@ image: url(/home/cnc/wire/src/wire/ui/rs/off_toggle_1.png);
        </property>
        <property name="minimumSize">
         <size>
-         <width>125</width>
-         <height>125</height>
+         <width>300</width>
+         <height>300</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -133,15 +133,15 @@ font: 25pt &quot;Bebas Kai&quot;;
 background-color: transparent;
 background: none;
 border:none;
-image: url(/home/cnc/.iMG/CNC_Home.png);
+image: url(/home/cnc/wire/src/wire/ui/rs/Home.png);
 }
 
 #ref_all_button_6:pressed {
-image: url(/home/cnc/.iMG/CNC_Home_pressed.png);
+image: url(/home/cnc/wire/src/wire/ui/rs/Home_Down.png);
 }</string>
        </property>
        <property name="text">
-        <string>HOME</string>
+        <string/>
        </property>
        <property name="rules" stdset="0">
         <string>[{&quot;channels&quot;: [{&quot;url&quot;: &quot;status:all_axes_homed&quot;, &quot;trigger&quot;: true}], &quot;property&quot;: &quot;Text&quot;, &quot;expression&quot;: &quot;'HOMED' if ch[0] else 'HOME'&quot;, &quot;name&quot;: &quot;reference_all&quot;}]</string>
@@ -153,28 +153,28 @@ image: url(/home/cnc/.iMG/CNC_Home_pressed.png);
       <widget class="DROLineEdit" name="dro_entry_main_x_3">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>150</y>
-         <width>500</width>
+         <x>290</x>
+         <y>270</y>
+         <width>550</width>
          <height>200</height>
         </rect>
        </property>
        <property name="minimumSize">
         <size>
-         <width>400</width>
+         <width>550</width>
          <height>200</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>500</width>
+         <width>550</width>
          <height>200</height>
         </size>
        </property>
        <property name="font">
         <font>
          <family>Digital Display</family>
-         <pointsize>100</pointsize>
+         <pointsize>112</pointsize>
          <weight>75</weight>
          <italic>false</italic>
          <bold>true</bold>
@@ -229,8 +229,8 @@ color: rgb(56, 54, 57);
       <widget class="ActionButton" name="EStoper">
        <property name="geometry">
         <rect>
-         <x>528</x>
-         <y>228</y>
+         <x>28</x>
+         <y>208</y>
          <width>256</width>
          <height>256</height>
         </rect>
@@ -256,8 +256,8 @@ image: url(/home/cnc/wire/src/wire/ui/rs/E_Stop_Inac.png);
       <widget class="StatusLED" name="statusled_8">
        <property name="geometry">
         <rect>
-         <x>520</x>
-         <y>220</y>
+         <x>20</x>
+         <y>200</y>
          <width>270</width>
          <height>270</height>
         </rect>
@@ -288,8 +288,8 @@ image: url(/home/cnc/wire/src/wire/ui/rs/E_Stop_Inac.png);
       <widget class="HalLedIndicator" name="halledindicator">
        <property name="geometry">
         <rect>
-         <x>320</x>
-         <y>430</y>
+         <x>10</x>
+         <y>130</y>
          <width>61</width>
          <height>51</height>
         </rect>
