--- a/src/wire/ui/mainwindow.ui
+++ b/src/wire/ui/mainwindow.ui
@@ -26,7 +26,7 @@
       <widget class="ActionButton" name="actionbutton_3">
        <property name="geometry">
         <rect>
-         <x>330</x>
+         <x>310</x>
          <y>20</y>
          <width>211</width>
          <height>91</height>
@@ -100,7 +100,7 @@ image: url(/home/cnc/wire/src/wire/ui/rs/off_toggle_1.png);
       <widget class="ActionButton" name="ref_all_button_6">
        <property name="geometry">
         <rect>
-         <x>560</x>
+         <x>530</x>
          <y>0</y>
          <width>300</width>
          <height>300</height>
@@ -141,7 +141,7 @@ image: url(/home/cnc/wire/src/wire/ui/rs/Home_Down.png);
 }</string>
        </property>
        <property name="text">
-        <string/>
+        <string>HOME</string>
        </property>
        <property name="rules" stdset="0">
         <string>[{&quot;channels&quot;: [{&quot;url&quot;: &quot;status:all_axes_homed&quot;, &quot;trigger&quot;: true}], &quot;property&quot;: &quot;Text&quot;, &quot;expression&quot;: &quot;'HOMED' if ch[0] else 'HOME'&quot;, &quot;name&quot;: &quot;reference_all&quot;}]</string>
@@ -153,7 +153,7 @@ image: url(/home/cnc/wire/src/wire/ui/rs/Home_Down.png);
       <widget class="DROLineEdit" name="dro_entry_main_x_3">
        <property name="geometry">
         <rect>
-         <x>290</x>
+         <x>270</x>
          <y>270</y>
          <width>550</width>
          <height>200</height>
